--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-lock icon" style="color: var(--main-color);"></i>
                         <h3 class="name">Bezpieczeństwo</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Bot nie zbiera wrażliwych informacji typu e-maili i ip!<br></p>
+                        <p class="description" style="color: var(--secondary-text-color);">Bot nie zbiera wrażliwych informacji typu e-maile i ip!<br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
